RESOLVED FIXED169676
Fix uninitialized public members in WTF
https://bugs.webkit.org/show_bug.cgi?id=169676
Summary Fix uninitialized public members in WTF
Tomas Popela
Reported 2017-03-15 08:05:16 PDT
Found by Coverity scan.
Attachments
Patch (3.34 KB, patch)
2017-03-15 08:07 PDT, Tomas Popela
no flags
Tomas Popela
Comment 1 2017-03-15 08:07:57 PDT
Alexey Proskuryakov
Comment 2 2017-03-15 19:28:31 PDT
Comment on attachment 304500 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=304500&action=review > Source/WTF/ChangeLog:8 > + Found by Coverity scan. Does this fix any bugs?
Tomas Popela
Comment 3 2017-03-16 01:51:48 PDT
(In reply to comment #2) > Comment on attachment 304500 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=304500&action=review > > > Source/WTF/ChangeLog:8 > > + Found by Coverity scan. > > Does this fix any bugs? No known bugs yet, but only initializes uninitialized members.
Tomas Popela
Comment 4 2017-03-23 02:10:43 PDT
Comment on attachment 304500 [details] Patch Clearing flags on attachment: 304500 Committed r214299: <http://trac.webkit.org/changeset/214299>
Tomas Popela
Comment 5 2017-03-23 02:10:51 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2017-03-23 07:56:05 PDT
While I suppose this is OK, I am not sure why it’s important to initialize data members in code paths where they are never read from.
Note You need to log in before you can comment on or make changes to this bug.