Fix uninitialized public members in WTF https://bugs.webkit.org/show_bug.cgi?id=169676

Reviewed by Michael Catanzaro.

Found by Coverity scan.

* wtf/Bag.h:
* wtf/HashTable.h:
* wtf/HashTraits.h:
* wtf/Insertion.h:
* wtf/OrderMaker.h:
* wtf/ParallelJobsGeneric.h:

Canonical link: https://commits.webkit.org/186926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214299 268f45cc-cd09-0410-ab3c-d52691b4dbfc